syntax = "proto3";

package comp;


import "google/api/annotations.proto";




option go_package = "tp.comp.v1.;compv1";

service Company{
  rpc Company(GetCompanyRequest) returns (GetCompanyResponse){
    option (google.api.http) = {
      get: "/v1/company/{companyID}"
    };
  }

  rpc CompanyGithubIntegration(GetCompanyGithubIntegrationRequest) returns (GetCompanyGithubIntegrationResponse);
    }



message GetCompanyRequest{
  int64 companyID = 1;
}

message GetCompanyResponse{
  string company_name = 1;
  string description = 2;
  string website_url = 3;
  string logo = 4;
}

////////////////////



message GetCompanyGithubIntegrationRequest{
  string company_id = 1;
}

message GetCompanyGithubIntegrationResponse{
  string company_name = 1;
  int64 installation_id = 2;
}

